# bbb-livekit-stt

./: .env.example  CHANGELOG.md  Dockerfile  README.md  config.py  events.py  gladia_stt_agent.py  main.py  pyproject.toml  redis_manager.py  utils.py
.github/workflows/: publish-docker-image.yml  tests.yml
tests/: test_agent.py  test_config.py  test_events.py  test_redis_manager.py  test_utils.py
tests/integration/: conftest.py  test_gladia_stt.py
