[project]
name = "bbb-livekit-stt"
version = "0.2.0"
description = "Provides STT for BigBlueButton meetings using LiveKit as their audio bridge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[gladia]~=1.4",
    "python-dotenv~=1.1.1",
    "redis~=6.4.0",
    "nest-asyncio~=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["config", "events", "gladia_stt_agent", "redis_manager", "utils"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
